@@ -1,3 +1,9 @@
+2008-01-23  Sam Steingold  <sds@gnu.org>
+
+	* foreign1.lisp (finalize-coutput-file): constants
+	*CONSTANT-TABLE* are now (const . guard)
+	(DEF-C-CONST): accept :GUARD
+
 2008-01-22  Sam Steingold  <sds@gnu.org>
 
 	* modules/bindings/glibc/linux.lisp (SIGSET_NWORDS): compute using
